增加产品设计分类
